include/codata_constants_2018.h

ADD_IMPORT extern const double BOLTZMANN_CONSTANT_2018;/**< J K^-1 */
ADD_IMPORT extern const double U_BOLTZMANN_CONSTANT_2018;/**< J K^-1 */
ADD_IMPORT extern const double BOLTZMANN_CONSTANT_IN_EV_K_2018;/**< eV K^-1 */
ADD_IMPORT extern const double U_BOLTZMANN_CONSTANT_IN_EV_K_2018;/**< eV K^-1 */
ADD_IMPORT extern const double BOLTZMANN_CONSTANT_IN_HZ_K_2018;/**< Hz K^-1 */
ADD_IMPORT extern const double U_BOLTZMANN_CONSTANT_IN_HZ_K_2018;/**< Hz K^-1 */
ADD_IMPORT extern const double BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN_2018;/**< m^-1 K^-1 */
ADD_IMPORT extern const double U_BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN_2018;/**< m^-1 K^-1 */
ADD_IMPORT extern const double CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2018;/**< ohm */
ADD_IMPORT extern const double U_CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2018;/**< ohm */
ADD_IMPORT extern const double CLASSICAL_ELECTRON_RADIUS_2018;/**< m */
ADD_IMPORT extern const double U_CLASSICAL_ELECTRON_RADIUS_2018;/**< m */
ADD_IMPORT extern const double COMPTON_WAVELENGTH_2018;/**< m */
ADD_IMPORT extern const double U_COMPTON_WAVELENGTH_2018;/**< m */
ADD_IMPORT extern const double CONDUCTANCE_QUANTUM_2018;/**< S */
ADD_IMPORT extern const double U_CONDUCTANCE_QUANTUM_2018;/**< S */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_AMPERE_90_2018;/**< A */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_AMPERE_90_2018;/**< A */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_COULOMB_90_2018;/**< C */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_COULOMB_90_2018;/**< C */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_FARAD_90_2018;/**< F */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_FARAD_90_2018;/**< F */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_HENRY_90_2018;/**< H */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_HENRY_90_2018;/**< H */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2018;/**< Hz V^-1 */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2018;/**< Hz V^-1 */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_OHM_90_2018;/**< ohm */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_OHM_90_2018;/**< ohm */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_VOLT_90_2018;/**< V */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_VOLT_90_2018;/**< V */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2018;/**< ohm */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2018;/**< ohm */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_WATT_90_2018;/**< W */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_WATT_90_2018;/**< W */
ADD_IMPORT extern const double COPPER_X_UNIT_2018;/**< m */
ADD_IMPORT extern const double U_COPPER_X_UNIT_2018;/**< m */
ADD_IMPORT extern const double DEUTERON_ELECTRON_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double U_DEUTERON_ELECTRON_MAG__MOM__RATIO_2018;/**<  */
ADD_IMPORT extern const double DEUTERON_ELECTRON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_DEUTERON_ELECTRON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double DEUTERON_G_FACTOR_2018;/**<  */
ADD_IMPORT extern const double U_DEUTERON_G_FACTOR_2018;/**<  */
ADD_IMPORT extern const double DEUTERON_MAG__MOM_2018;/**< J T^-1 */
ADD_IMPORT extern const double U_DEUTERON_MAG__MOM_2018;/**< J T^-1 */
ADD_IMPORT extern const double DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018;/**<  */
ADD_IMPORT extern const double DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018;/**<  */
ADD_IMPORT extern const double DEUTERON_MASS_2018;/**< kg */
ADD_IMPORT extern const double U_DEUTERON_MASS_2018;/**< kg */
ADD_IMPORT extern const double DEUTERON_MASS_ENERGY_EQUIVALENT_2018;/**< J */
ADD_IMPORT extern const double U_DEUTERON_MASS_ENERGY_EQUIVALENT_2018;/**< J */