src/codata_constants_2018.f90


real(c_double), protected, public, bind(C,name="BOLTZMANN_CONSTANT_2018"):: &
capi_050_2018=BOLTZMANN_CONSTANT_2018
real(c_double), protected, public, bind(C,name="U_BOLTZMANN_CONSTANT_2018") :: &
capi_U_050_2018=U_BOLTZMANN_CONSTANT_2018

real(real64), parameter, public :: BOLTZMANN_CONSTANT_IN_EV_K_2018=8.617333262d-5 !! eV K^-1
real(real64), parameter, public :: U_BOLTZMANN_CONSTANT_IN_EV_K_2018=0.0d0 !! eV K^-1

real(c_double), protected, public, bind(C,name="BOLTZMANN_CONSTANT_IN_EV_K_2018"):: &
capi_051_2018=BOLTZMANN_CONSTANT_IN_EV_K_2018
real(c_double), protected, public, bind(C,name="U_BOLTZMANN_CONSTANT_IN_EV_K_2018") :: &
capi_U_051_2018=U_BOLTZMANN_CONSTANT_IN_EV_K_2018

real(real64), parameter, public :: BOLTZMANN_CONSTANT_IN_HZ_K_2018=2.083661912d10 !! Hz K^-1
real(real64), parameter, public :: U_BOLTZMANN_CONSTANT_IN_HZ_K_2018=0.0d0 !! Hz K^-1

real(c_double), protected, public, bind(C,name="BOLTZMANN_CONSTANT_IN_HZ_K_2018"):: &
capi_052_2018=BOLTZMANN_CONSTANT_IN_HZ_K_2018
real(c_double), protected, public, bind(C,name="U_BOLTZMANN_CONSTANT_IN_HZ_K_2018") :: &
capi_U_052_2018=U_BOLTZMANN_CONSTANT_IN_HZ_K_2018

real(real64), parameter, public :: BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN_2018=69.50348004d0 !! m^-1 K^-1
real(real64), parameter, public :: U_BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN_2018=0.0d0 !! m^-1 K^-1

real(c_double), protected, public, bind(C,name="BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN_2018"):: &
capi_053_2018=BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN_2018
real(c_double), protected, public, bind(C,name="U_BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN_2018") :: &
capi_U_053_2018=U_BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN_2018

real(real64), parameter, public :: CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2018=376.730313668d0 !! ohm
real(real64), parameter, public :: U_CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2018=0.000000057d0 !! ohm

real(c_double), protected, public, bind(C,name="CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2018"):: &
capi_054_2018=CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2018
real(c_double), protected, public, bind(C,name="U_CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2018") :: &
capi_U_054_2018=U_CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2018

real(real64), parameter, public :: CLASSICAL_ELECTRON_RADIUS_2018=2.8179403262d-15 !! m
real(real64), parameter, public :: U_CLASSICAL_ELECTRON_RADIUS_2018=0.0000000013d-15 !! m

real(c_double), protected, public, bind(C,name="CLASSICAL_ELECTRON_RADIUS_2018"):: &
capi_055_2018=CLASSICAL_ELECTRON_RADIUS_2018
real(c_double), protected, public, bind(C,name="U_CLASSICAL_ELECTRON_RADIUS_2018") :: &
capi_U_055_2018=U_CLASSICAL_ELECTRON_RADIUS_2018

real(real64), parameter, public :: COMPTON_WAVELENGTH_2018=2.42631023867d-12 !! m
real(real64), parameter, public :: U_COMPTON_WAVELENGTH_2018=0.00000000073d-12 !! m

real(c_double), protected, public, bind(C,name="COMPTON_WAVELENGTH_2018"):: &
capi_056_2018=COMPTON_WAVELENGTH_2018
real(c_double), protected, public, bind(C,name="U_COMPTON_WAVELENGTH_2018") :: &
capi_U_056_2018=U_COMPTON_WAVELENGTH_2018

real(real64), parameter, public :: CONDUCTANCE_QUANTUM_2018=7.748091729d-5 !! S
real(real64), parameter, public :: U_CONDUCTANCE_QUANTUM_2018=0.0d0 !! S

real(c_double), protected, public, bind(C,name="CONDUCTANCE_QUANTUM_2018"):: &
capi_057_2018=CONDUCTANCE_QUANTUM_2018
real(c_double), protected, public, bind(C,name="U_CONDUCTANCE_QUANTUM_2018") :: &
capi_U_057_2018=U_CONDUCTANCE_QUANTUM_2018

real(real64), parameter, public :: CONVENTIONAL_VALUE_OF_AMPERE_90_2018=1.00000008887d0 !! A
real(real64), parameter, public :: U_CONVENTIONAL_VALUE_OF_AMPERE_90_2018=0.0d0 !! A

real(c_double), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_AMPERE_90_2018"):: &
capi_058_2018=CONVENTIONAL_VALUE_OF_AMPERE_90_2018
real(c_double), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_AMPERE_90_2018") :: &
capi_U_058_2018=U_CONVENTIONAL_VALUE_OF_AMPERE_90_2018

real(real64), parameter, public :: CONVENTIONAL_VALUE_OF_COULOMB_90_2018=1.00000008887d0 !! C
real(real64), parameter, public :: U_CONVENTIONAL_VALUE_OF_COULOMB_90_2018=0.0d0 !! C

real(c_double), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_COULOMB_90_2018"):: &
capi_059_2018=CONVENTIONAL_VALUE_OF_COULOMB_90_2018
real(c_double), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_COULOMB_90_2018") :: &
capi_U_059_2018=U_CONVENTIONAL_VALUE_OF_COULOMB_90_2018

real(real64), parameter, public :: CONVENTIONAL_VALUE_OF_FARAD_90_2018=0.99999998220d0 !! F
real(real64), parameter, public :: U_CONVENTIONAL_VALUE_OF_FARAD_90_2018=0.0d0 !! F

real(c_double), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_FARAD_90_2018"):: &
capi_060_2018=CONVENTIONAL_VALUE_OF_FARAD_90_2018
real(c_double), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_FARAD_90_2018") :: &
capi_U_060_2018=U_CONVENTIONAL_VALUE_OF_FARAD_90_2018

real(real64), parameter, public :: CONVENTIONAL_VALUE_OF_HENRY_90_2018=1.00000001779d0 !! H
real(real64), parameter, public :: U_CONVENTIONAL_VALUE_OF_HENRY_90_2018=0.0d0 !! H

real(c_double), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_HENRY_90_2018"):: &
capi_061_2018=CONVENTIONAL_VALUE_OF_HENRY_90_2018
real(c_double), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_HENRY_90_2018") :: &
capi_U_061_2018=U_CONVENTIONAL_VALUE_OF_HENRY_90_2018

real(real64), parameter, public :: CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2018=483597.9d9 !! Hz V^-1
real(real64), parameter, public :: U_CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2018=0.0d0 !! Hz V^-1

real(c_double), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2018"):: &
capi_062_2018=CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2018
real(c_double), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2018") :: &
capi_U_062_2018=U_CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2018

real(real64), parameter, public :: CONVENTIONAL_VALUE_OF_OHM_90_2018=1.00000001779d0 !! ohm
real(real64), parameter, public :: U_CONVENTIONAL_VALUE_OF_OHM_90_2018=0.0d0 !! ohm

real(c_double), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_OHM_90_2018"):: &
capi_063_2018=CONVENTIONAL_VALUE_OF_OHM_90_2018
real(c_double), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_OHM_90_2018") :: &
capi_U_063_2018=U_CONVENTIONAL_VALUE_OF_OHM_90_2018

real(real64), parameter, public :: CONVENTIONAL_VALUE_OF_VOLT_90_2018=1.00000010666d0 !! V
real(real64), parameter, public :: U_CONVENTIONAL_VALUE_OF_VOLT_90_2018=0.0d0 !! V

real(c_double), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_VOLT_90_2018"):: &
capi_064_2018=CONVENTIONAL_VALUE_OF_VOLT_90_2018
real(c_double), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_VOLT_90_2018") :: &
capi_U_064_2018=U_CONVENTIONAL_VALUE_OF_VOLT_90_2018

real(real64), parameter, public :: CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2018=25812.807d0 !! ohm
real(real64), parameter, public :: U_CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2018=0.0d0 !! ohm

real(c_double), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2018"):: &
capi_065_2018=CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2018
real(c_double), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2018") :: &
capi_U_065_2018=U_CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2018

real(real64), parameter, public :: CONVENTIONAL_VALUE_OF_WATT_90_2018=1.00000019553d0 !! W
real(real64), parameter, public :: U_CONVENTIONAL_VALUE_OF_WATT_90_2018=0.0d0 !! W

real(c_double), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_WATT_90_2018"):: &
capi_066_2018=CONVENTIONAL_VALUE_OF_WATT_90_2018
real(c_double), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_WATT_90_2018") :: &
capi_U_066_2018=U_CONVENTIONAL_VALUE_OF_WATT_90_2018

real(real64), parameter, public :: COPPER_X_UNIT_2018=1.00207697d-13 !! m
real(real64), parameter, public :: U_COPPER_X_UNIT_2018=0.00000028d-13 !! m

real(c_double), protected, public, bind(C,name="COPPER_X_UNIT_2018"):: &
capi_067_2018=COPPER_X_UNIT_2018
real(c_double), protected, public, bind(C,name="U_COPPER_X_UNIT_2018") :: &
capi_U_067_2018=U_COPPER_X_UNIT_2018

real(real64), parameter, public :: DEUTERON_ELECTRON_MAG__MOM__RATIO_2018=-4.664345551d-4 !! 
real(real64), parameter, public :: U_DEUTERON_ELECTRON_MAG__MOM__RATIO_2018=0.000000012d-4 !! 

real(c_double), protected, public, bind(C,name="DEUTERON_ELECTRON_MAG__MOM__RATIO_2018"):: &
capi_068_2018=DEUTERON_ELECTRON_MAG__MOM__RATIO_2018
real(c_double), protected, public, bind(C,name="U_DEUTERON_ELECTRON_MAG__MOM__RATIO_2018") :: &
capi_U_068_2018=U_DEUTERON_ELECTRON_MAG__MOM__RATIO_2018

real(real64), parameter, public :: DEUTERON_ELECTRON_MASS_RATIO_2018=3670.48296788d0 !! 
real(real64), parameter, public :: U_DEUTERON_ELECTRON_MASS_RATIO_2018=0.00000013d0 !! 

real(c_double), protected, public, bind(C,name="DEUTERON_ELECTRON_MASS_RATIO_2018"):: &
capi_069_2018=DEUTERON_ELECTRON_MASS_RATIO_2018
real(c_double), protected, public, bind(C,name="U_DEUTERON_ELECTRON_MASS_RATIO_2018") :: &
capi_U_069_2018=U_DEUTERON_ELECTRON_MASS_RATIO_2018

real(real64), parameter, public :: DEUTERON_G_FACTOR_2018=0.8574382338d0 !! 
real(real64), parameter, public :: U_DEUTERON_G_FACTOR_2018=0.0000000022d0 !! 

real(c_double), protected, public, bind(C,name="DEUTERON_G_FACTOR_2018"):: &
capi_070_2018=DEUTERON_G_FACTOR_2018
real(c_double), protected, public, bind(C,name="U_DEUTERON_G_FACTOR_2018") :: &
capi_U_070_2018=U_DEUTERON_G_FACTOR_2018

real(real64), parameter, public :: DEUTERON_MAG__MOM_2018=4.330735094d-27 !! J T^-1
real(real64), parameter, public :: U_DEUTERON_MAG__MOM_2018=0.000000011d-27 !! J T^-1

real(c_double), protected, public, bind(C,name="DEUTERON_MAG__MOM_2018"):: &
capi_071_2018=DEUTERON_MAG__MOM_2018
real(c_double), protected, public, bind(C,name="U_DEUTERON_MAG__MOM_2018") :: &
capi_U_071_2018=U_DEUTERON_MAG__MOM_2018

real(real64), parameter, public :: DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018=4.669754570d-4 !! 
real(real64), parameter, public :: U_DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018=0.000000012d-4 !! 

real(c_double), protected, public, bind(C,name="DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018"):: &
capi_072_2018=DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018
real(c_double), protected, public, bind(C,name="U_DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018") :: &
capi_U_072_2018=U_DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018

real(real64), parameter, public :: DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018=0.8574382338d0 !! 
real(real64), parameter, public :: U_DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018=0.0000000022d0 !! 

real(c_double), protected, public, bind(C,name="DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018"):: &
capi_073_2018=DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018
real(c_double), protected, public, bind(C,name="U_DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018") :: &
capi_U_073_2018=U_DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018

real(real64), parameter, public :: DEUTERON_MASS_2018=3.3435837724d-27 !! kg
real(real64), parameter, public :: U_DEUTERON_MASS_2018=0.0000000010d-27 !! kg

real(c_double), protected, public, bind(C,name="DEUTERON_MASS_2018"):: &
capi_074_2018=DEUTERON_MASS_2018
real(c_double), protected, public, bind(C,name="U_DEUTERON_MASS_2018") :: &
capi_U_074_2018=U_DEUTERON_MASS_2018

real(real64), parameter, public :: DEUTERON_MASS_ENERGY_EQUIVALENT_2018=3.00506323102d-10 !! J
real(real64), parameter, public :: U_DEUTERON_MASS_ENERGY_EQUIVALENT_2018=0.00000000091d-10 !! J

real(c_double), protected, public, bind(C,name="DEUTERON_MASS_ENERGY_EQUIVALENT_2018"):: &
capi_075_2018=DEUTERON_MASS_ENERGY_EQUIVALENT_2018
real(c_double), protected, public, bind(C,name="U_DEUTERON_MASS_ENERGY_EQUIVALENT_2018") :: &
capi_U_075_2018=U_DEUTERON_MASS_ENERGY_EQUIVALENT_2018
